[tool.poetry]
name = "national-library-db"
version = "0.1.0"
description = ""
authors = ["Irina Ftv <networkoxygenn@yandex.by>"]
readme = "README.md"
packages = [{include = "national_library_db"}]

[tool.poetry.dependencies]
python = "^3.11"
py7zr = "^0.21.0"
socks = "^0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
